releasing package ubuntu-release-upgrader version 1:18.10.11

--- a/data/mirrors.cfg
+++ b/data/mirrors.cfg
@@ -34,7 +34,6 @@ http://ubuntu.c3sl.ufpr.br/ubuntu/
 http://mirrors.dotsrc.org/ubuntu/
 #===Estonia===
 #===Finland===
-http://www.nic.funet.fi/pub/mirrors/archive.ubuntu.com/
 #===France===
 #===Germany===
 http://debian.charite.de/ubuntu/
@@ -174,8 +173,6 @@ http://mirror.bytemark.co.uk/ubuntu/
 http://mirror.corbina.net/ubuntu/
 http://mirror.kku.ac.th/ubuntu/
 http://mirror.metrocast.net/ubuntu/
-http://mirror.steadfast.net/ubuntu/
-http://mirror.telepoint.bg/ubuntu/
 http://mirror.timeweb.ru/ubuntu/
 http://mirror.umd.edu/ubuntu/
 http://mirror.unix-solutions.be/ubuntu/
@@ -427,7 +424,6 @@ http://ubuntu.uc3m.es/ubuntu/
 http://ubuntu.cs.nctu.edu.tw/ubuntu/
 http://mirror.muvhost.com/ubuntu/
 http://mirror.clearsky.vn/ubuntu/
-http://mirror.as24220.net/pub/ubuntu/
 http://mirror.vpgrp.io/ubuntu/
 http://mirrors.nxthost.com/ubuntu/
 http://mirror.picosecond.org/ubuntu/
@@ -447,12 +443,10 @@ http://mirror.nl.datapacket.com/ubuntu/
 http://ubuntu.mirror.globo.tech/
 http://mirror.xtom.com.hk/ubuntu/
 http://ubuntu.mirror.myduniahost.com/ubuntu/
-http://mirror.btechcloud.com/ubuntu/
 http://mirrors.sorengard.com/ubuntu/
 http://mirror.genesisadaptive.com/ubuntu/
 http://ubuntu-mirror.jbstuff.net/ubuntu/
 http://mirrors.nav.ro/ubuntu/
-http://mirror.wtnet.de/ubuntu/
 http://mirror.kakao.com/ubuntu/
 http://mirror.cse.iitk.ac.in/ubuntu/
 http://mirrors.mivocloud.com/ubuntu/
@@ -467,7 +461,6 @@ http://mirror.iodc.dk/ubuntu/
 http://mirrors.huaweicloud.com/repository/ubuntu/
 http://mirrors.serverhost.ro/ubuntu/
 http://mirror.mrjester.net/ubuntu/archive/
-http://mirror.nwlab.tk/ubuntu/
 http://mirror.onevip.mk/ubuntu/
 http://ftp.heanet.ie/pub/ubuntu/
 http://mirror.cs.jmu.edu/pub/ubuntu/
@@ -484,13 +477,10 @@ http://ftp.harukasan.org/ubuntu/
 http://mirrors.nwafu.edu.cn/ubuntu/
 http://mirror.aptus.co.tz/pub/ubuntuarchive/
 http://repo.ialab.dsu.edu/ubuntu/
-http://ubuntu.mirror.solnode.io/ubuntu/
 http://mirror.ufam.edu.br/ubuntu/
 http://ftp.rnl.tecnico.ulisboa.pt/pub/ubuntu/archive/
 http://suse.uni-leipzig.de/pub/releases.ubuntu.com/ubuntu/
-http://mirrors.powernet.com.ru/ubuntu/archive/
 http://pubmirrors.dal.corespace.com/ubuntu/
-http://ubuntu.mirrors.skynet.be/ubuntu/
 http://ftp.tsukuba.wide.ad.jp/Linux/ubuntu/
 http://mirror.kumi.systems/ubuntu/
 http://mirror.ufca.edu.br/mirror/ubuntu-archive/
@@ -498,9 +488,20 @@ http://mirror-hk.koddos.net/ubuntu/
 http://mirrors.njupt.edu.cn/ubuntu/
 http://rawpower.ddns.net/ubuntu/
 http://mirrors.ustc.edu.cn/ubuntu/
-http://mirror.stjschools.org/public/ubuntu-archive/
 http://mirrors.nju.edu.cn/ubuntu/
 http://mirror.retentionrange.co.bw/ubuntu/
-http://ubuntu.cybertips.info/ubuntu/
 http://mirror.crazynetwork.it/ubuntu/archive/
 http://mirror.ancl.hawaii.edu/linux/ubuntu/
+http://ftp.utexas.edu/ubuntu/
+ftp://ftp.cs.mun.ca/pub/mirror/ubuntu/
+http://mirror.steadfastnet.com/ubuntu/
+http://mirror.ps.kz/ubuntu/
+http://ubuntu.whats-in.space/ubuntu/archive/
+http://aze.archive.ubuntu.com/ubuntu/
+http://mirrors.xtom.com/ubuntu/
+http://mirror.rise.ph/ubuntu/
+http://mozart.ee.ic.ac.uk/ubuntu-archive/
+http://ubuntu.mirror.datamossa.io/ubuntu/
+http://mirrors.powernet.com.ru/ubuntu/
+http://mirror.linux.pizza/ubuntu/
+http://mirror.ncunwlab.tk/ubuntu/
