--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,8 +1,12 @@
 # demoted packages from bionic to cosmic
 adium-theme-ubuntu
+aptitude
+aptitude-common
+aptitude-doc-en
 augeas-doc
 augeas-lenses
 bdf2psf
+binfmt-support
 bittornado
 bzr
 bzr-doc
@@ -53,6 +57,8 @@ libasan4-arm64-cross
 libasan4-armhf-cross
 libasan4-powerpc-cross
 libasan4-ppc64el-cross
+libaudio-dev
+libaudio2
 libaugeas-dev
 libaugeas0
 libboost-atomic1.65-dev
@@ -62,15 +68,24 @@ libboost-chrono1.65.1
 libboost-date-time1.65-dev
 libboost-date-time1.65.1
 libboost-filesystem1.65-dev
+libboost-filesystem1.65.1
+libboost-iostreams1.65.1
 libboost-locale1.65.1
 libboost-program-options1.65-dev
 libboost-program-options1.65.1
 libboost-serialization1.65-dev
 libboost-serialization1.65.1
 libboost-system1.65-dev
+libboost-system1.65.1
 libboost-thread1.65-dev
 libboost-thread1.65.1
+libboost1.65-dev
+libboost1.65-tools-dev
 libcilkrts5-armhf-cross
+libclang1-6.0
+libcwidget-dev
+libcwidget-doc
+libcwidget3v5
 libdevhelp-3-5
 libdevhelp-dev
 libfile-copy-recursive-perl
@@ -80,10 +95,17 @@ libgcc-7-dev-arm64-cross
 libgcc-7-dev-armhf-cross
 libgcc-7-dev-powerpc-cross
 libgcc-7-dev-ppc64el-cross
+libgpgmepp-dev
 libgtk2.0-dev
 libgtkmm-2.4-dev
+liblld-6.0
+liblld-6.0-dev
 libllvm3.9
 libllvm3.9-dbg
+libllvm6.0
+liblxc-common
+liblxc-dev
+liblxc1
 libncurses5
 libnetcf-dev
 libnetcf1
@@ -97,8 +119,12 @@ libnm-gtk0
 libnm-util-dev
 libnm-util2
 libpam-radius-auth
+libqgpgme7
+libreoffice-style-galaxy
 libsdl1.2-dev
 libsdl1.2debian
+libsnapd-qt-dev
+libsnapd-qt1
 libstdc++-7-dev-arm64-cross
 libstdc++-7-dev-armhf-cross
 libstdc++-7-dev-powerpc-cross
@@ -109,11 +135,20 @@ libubsan0-powerpc-cross
 libubsan0-ppc64el-cross
 libxapian-java-doc
 light-themes
+lld-6.0
 llvm-3.9
 llvm-3.9-dev
 llvm-3.9-doc
 llvm-3.9-examples
 llvm-3.9-runtime
+llvm-6.0
+llvm-6.0-dev
+llvm-6.0-doc
+llvm-6.0-examples
+llvm-6.0-runtime
+lxc-dev
+lxcfs
+nas-doc
 postgresql-plpython-10
 python-bzrlib
 python-bzrlib-dbg
@@ -129,6 +164,8 @@ python-pika-doc
 python-pika-pool
 python-positional
 python-positional-doc
+python-pycryptodome
+python-pycryptodome-doc
 python-recaptcha
 python-urlgrabber
 python-wadllib
@@ -139,3 +176,6 @@ python3-greenlet
 sbc-tools
 ubuntu-artwork
 ubuntu-sounds
+ubuntu-wallpapers-bionic
+uidmap
+xdelta3
