debian/control: change ubuntu-release-upgrader-core to depend on ca-certificates (LP: #1796940)

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,8 @@ Architecture: all
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${python3:Depends},
          ${misc:Depends},
-         python3-distupgrade (= ${source:Version})
+         python3-distupgrade (= ${source:Version}),
+         ca-certificates
 Recommends: libpam-modules (>= 1.0.1-9ubuntu3)
 Replaces: update-manager (<< 1:0.165),
           update-manager-core (<< 1:0.165)
