--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -114,8 +114,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=bionic
-To=cosmic
+From=cosmic
+To=disco
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
