--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,181 +1,2 @@
-# demoted packages from bionic to cosmic
-adium-theme-ubuntu
-aptitude
-aptitude-common
-aptitude-doc-en
-augeas-doc
-augeas-lenses
-bdf2psf
-binfmt-support
-bittornado
-bzr
-bzr-doc
-bzrtools
-cpp-7-aarch64-linux-gnu
-cpp-7-arm-linux-gnueabihf
-cpp-7-powerpc-linux-gnu
-cpp-7-powerpc64le-linux-gnu
-devhelp
-devhelp-common
-dovecot-managesieved
-dovecot-sieve
-emacs-goodies-el
-g++-7
-g++-7-aarch64-linux-gnu
-g++-7-arm-linux-gnueabihf
-g++-7-multilib
-g++-7-powerpc-linux-gnu
-g++-7-powerpc64le-linux-gnu
-gcc-7-aarch64-linux-gnu
-gcc-7-aarch64-linux-gnu-base
-gcc-7-arm-linux-gnueabihf
-gcc-7-arm-linux-gnueabihf-base
-gcc-7-cross-base
-gcc-7-multilib
-gcc-7-powerpc-linux-gnu
-gcc-7-powerpc-linux-gnu-base
-gcc-7-powerpc64le-linux-gnu
-gcc-7-powerpc64le-linux-gnu-base
-gfortran-7
-gfortran-7-doc
-gfortran-7-multilib
-gir1.2-devhelp-3.0
-gir1.2-gtk-2.0
-git-remote-bzr
-gtk2.0-examples
-guile-2.0
-guile-2.0-dev
-guile-2.0-doc
-guile-2.0-libs
-ifenslave
-libapache2-mod-python
-libapache2-mod-python-doc
-libargon2-0
-libart-2.0-2
-libart-2.0-dev
-libasan4-arm64-cross
-libasan4-armhf-cross
-libasan4-powerpc-cross
-libasan4-ppc64el-cross
-libaudio-dev
-libaudio2
-libaugeas-dev
-libaugeas0
-libboost-atomic1.65-dev
-libboost-atomic1.65.1
-libboost-chrono1.65-dev
-libboost-chrono1.65.1
-libboost-date-time1.65-dev
-libboost-date-time1.65.1
-libboost-filesystem1.65-dev
-libboost-filesystem1.65.1
-libboost-iostreams1.65.1
-libboost-locale1.65.1
-libboost-program-options1.65-dev
-libboost-program-options1.65.1
-libboost-serialization1.65-dev
-libboost-serialization1.65.1
-libboost-system1.65-dev
-libboost-system1.65.1
-libboost-thread1.65-dev
-libboost-thread1.65.1
-libboost1.65-dev
-libboost1.65-tools-dev
-libcilkrts5-armhf-cross
-libclang1-6.0
-libcwidget-dev
-libcwidget-doc
-libcwidget3v5
-libdevhelp-3-5
-libdevhelp-dev
-libfile-copy-recursive-perl
-libfwup-dev
-libgail-dev
-libgcc-7-dev-arm64-cross
-libgcc-7-dev-armhf-cross
-libgcc-7-dev-powerpc-cross
-libgcc-7-dev-ppc64el-cross
-libgpgmepp-dev
-libgtk2.0-dev
-libgtkmm-2.4-dev
-liblld-6.0
-liblld-6.0-dev
-libllvm3.9
-libllvm3.9-dbg
-libllvm6.0
-liblxc-common
-liblxc-dev
-liblxc1
-libncurses5
-libnetcf-dev
-libnetcf1
-libnetcf1-dbg
-libnm-glib-dev
-libnm-glib-vpn-dev
-libnm-glib-vpn1
-libnm-glib4
-libnm-gtk-dev
-libnm-gtk0
-libnm-util-dev
-libnm-util2
-libpam-radius-auth
-libqgpgme7
-libreoffice-style-galaxy
-libsdl1.2-dev
-libsdl1.2debian
-libsnapd-qt-dev
-libsnapd-qt1
-libstdc++-7-dev-arm64-cross
-libstdc++-7-dev-armhf-cross
-libstdc++-7-dev-powerpc-cross
-libstdc++-7-dev-ppc64el-cross
-libubsan0-arm64-cross
-libubsan0-armhf-cross
-libubsan0-powerpc-cross
-libubsan0-ppc64el-cross
-libxapian-java-doc
-light-themes
-lld-6.0
-llvm-3.9
-llvm-3.9-dev
-llvm-3.9-doc
-llvm-3.9-examples
-llvm-3.9-runtime
-llvm-6.0
-llvm-6.0-dev
-llvm-6.0-doc
-llvm-6.0-examples
-llvm-6.0-runtime
-lxc-dev
-lxcfs
-nas-doc
-postgresql-plpython-10
-python-bzrlib
-python-bzrlib-dbg
-python-configobj
-python-launchpadlib
-python-lazr.restfulclient
-python-lazr.uri
-python-moinmoin
-python-oauth
-python-parsedatetime
-python-pika
-python-pika-doc
-python-pika-pool
-python-positional
-python-positional-doc
-python-pycryptodome
-python-pycryptodome-doc
-python-recaptcha
-python-urlgrabber
-python-wadllib
-python-xapian
-python-xappy
-python3-d2to1
-python3-greenlet
-sbc-tools
-ubuntu-artwork
-ubuntu-sounds
-ubuntu-wallpapers-bionic
-uidmap
-xdelta3
+# demoted packages from cosmic to disco
+
