releasing package ubuntu-release-upgrader version 1:18.10.11.1

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -86,6 +86,7 @@ libclang1-6.0
 libcwidget-dev
 libcwidget-doc
 libcwidget3v5
+libdbusmenu-gtk4
 libdevhelp-3-5
 libdevhelp-dev
 libfile-copy-recursive-perl
@@ -106,6 +107,8 @@ libllvm6.0
 liblxc-common
 liblxc-dev
 liblxc1
+libmozjs-52-0
+libmozjs-52-dev
 libncurses5
 libnetcf-dev
 libnetcf1
@@ -153,6 +156,7 @@ postgresql-plpython-10
 python-bzrlib
 python-bzrlib-dbg
 python-configobj
+python-keyrings.alt
 python-launchpadlib
 python-lazr.restfulclient
 python-lazr.uri
@@ -173,6 +177,7 @@ python-xapian
 python-xappy
 python3-d2to1
 python3-greenlet
+python3-keyrings.alt
 sbc-tools
 ubuntu-artwork
 ubuntu-sounds
