Remove lubuntu-core as a supported metapackage and a dependency of lubuntu-desktop.

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -12,7 +12,7 @@ SupportSSH=DistUpgradeViewText,DistUpgradeViewNonInteractive
 # the meta-pkgs we support
 MetaPkgs=ubuntu-desktop, kubuntu-desktop, xubuntu-core,
    xubuntu-desktop, ubuntustudio-desktop, mythbuntu-desktop,
-   kubuntu-netbook, lubuntu-core, lubuntu-desktop, ubuntu-gnome-desktop,
+   kubuntu-netbook, lubuntu-desktop, ubuntu-gnome-desktop,
    ubuntu-mate-core, ubuntu-mate-desktop,
    ubuntukylin-desktop, ubuntu-budgie-desktop
 BaseMetaPkgs=ubuntu-minimal, ubuntu-standard
@@ -86,11 +86,8 @@ KeyDependencies=ichthux-artwork, ichthux-default-settings
 [mythbuntu-desktop]
 KeyDependencies=mythbuntu-artwork, mythbuntu-default-settings
 
-[lubuntu-core]
-KeyDependencies=lubuntu-artwork, lubuntu-default-settings, openbox
-
 [lubuntu-desktop]
-KeyDependencies=lubuntu-core, lubuntu-default-settings
+KeyDependencies=lubuntu-artwork, lubuntu-default-settings
 
 [ubuntu-gnome-desktop]
 KeyDependencies=ubuntu-gnome-default-settings, ubuntu-gnome-wallpapers
