Remove the unused computer janitor code thereby resolving a Traceback that occurs when importing it. (LP: #1805475)

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,2 +1,193 @@
 # demoted packages from cosmic to disco
-
+doxygen
+doxygen-doc
+erlang-diameter
+erlang-edoc
+erlang-erl-docgen
+erlang-eunit
+erlang-odbc
+gir1.2-ido3-0.1
+imagemagick
+imagemagick-6.q16
+intel-gpu-tools
+intel-gpu-tools-dbg
+libapache2-mod-wsgi
+libclang1-7
+libdmx1-dbg
+libdouble-conversion-dev
+libdouble-conversion1
+libfs6-dbg
+libglm-doc
+libido3-0.1-0
+libido3-0.1-dev
+libixion-dev
+libixion-doc
+libmdds-dev
+libmetis-dev
+libmetis-doc
+libmetis5-dbg
+libnetpbm10
+libnetpbm10-dev
+libqt5concurrent5
+libqt5core5a
+libqt5dbus5
+libqt5gui5
+libqt5network5
+libqt5opengl5
+libqt5opengl5-dev
+libqt5printsupport5
+libqt5sql5
+libqt5sql5-sqlite
+libqt5svg5
+libqt5svg5-dev
+libqt5test5
+libqt5widgets5
+libqt5xml5
+libsmi2-dev
+libsmi2ldbl
+libssl1.0-dev
+libssl1.0.0
+libucpp-dev
+libzinnia-dev
+libzinnia-doc
+libzinnia0v5
+libzinnia0v5-dbg
+mozc-utils-gui
+netpbm
+neutron-vpnaas-common
+openexr-doc
+python-amqp
+python-aniso8601
+python-anyjson
+python-aodhclient
+python-automaton
+python-barbicanclient
+python-blazarclient
+python-cachetools
+python-castellan
+python-cotyledon
+python-croniter
+python-cursive
+python-ddt
+python-defusedxml
+python-egenix-mx-base-dbg
+python-egenix-mx-base-dev
+python-egenix-mxbeebase
+python-egenix-mxbeebase-doc
+python-egenix-mxdatetime-doc
+python-egenix-mxproxy
+python-egenix-mxproxy-doc
+python-egenix-mxqueue
+python-egenix-mxqueue-doc
+python-egenix-mxstack
+python-egenix-mxstack-doc
+python-egenix-mxtexttools
+python-egenix-mxtexttools-doc
+python-egenix-mxtools-doc
+python-egenix-mxuid
+python-egenix-mxuid-doc
+python-egenix-mxurl
+python-egenix-mxurl-doc
+python-flask-restful
+python-future
+python-gdbm
+python-gdbm-dbg
+python-glance-store
+python-gnocchiclient
+python-httplib2
+python-ipaddr
+python-jsonpath-rw
+python-jsonpath-rw-ext
+python-kazoo
+python-keystonemiddleware
+python-kombu
+python-libvirt
+python-magnumclient
+python-manilaclient
+python-markdown-doc
+python-microversion-parse
+python-migrate
+python-mistralclient
+python-mock
+python-mock-doc
+python-monascaclient
+python-nacl
+python-networkx
+python-neutron-lib
+python-octaviaclient
+python-openstackclient
+python-openvswitch
+python-os-brick
+python-os-traits
+python-os-vif
+python-os-win
+python-os-xenapi
+python-oslo.cache
+python-oslo.db
+python-oslo.messaging
+python-oslo.middleware
+python-oslo.privsep
+python-oslo.reports
+python-oslo.rootwrap
+python-oslo.service
+python-oslo.versionedobjects
+python-oslo.vmware
+python-ovsdbapp
+python-padme-doc
+python-paramiko
+python-passlib
+python-ply
+python-pycparser
+python-pylxd
+python-pymemcache
+python-pymysql
+python-pypowervm
+python-pyroute2
+python-pysaml2
+python-pysmi
+python-pysnmp4
+python-pysnmp4-apps
+python-pysnmp4-mibs
+python-redis
+python-requests-toolbelt
+python-requests-unixsocket
+python-retrying
+python-ryu
+python-saharaclient
+python-scrypt
+python-senlinclient
+python-sortedcontainers
+python-statsd
+python-suds
+python-taskflow
+python-tenacity
+python-testresources
+python-testscenarios
+python-tinyrpc
+python-tk-dbg
+python-tooz
+python-troveclient
+python-twisted
+python-vine
+python-voluptuous
+python-weakrefmethod
+python-wsme
+python-yaql
+python-zake
+python-zaqarclient
+python3-padme
+qt5-gtk-platformtheme
+qt5-qmake
+qt5-qmake-bin
+qtbase5-dev
+qtbase5-dev-tools
+qtbase5-doc
+qtbase5-examples
+qtbase5-private-dev
+qtchooser
+qtsvg5-doc
+qtsvg5-examples
+qttranslations5-l10n
+smitools
+tk8.6-dev
+tk8.6-doc
