releasing package ubuntu-release-upgrader version 1:19.04.7

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -18,6 +18,8 @@ libdouble-conversion-dev
 libdouble-conversion1
 libfs6-dbg
 libglm-doc
+libicu-le-hb-dev
+libicu-le-hb0
 libido3-0.1-0
 libido3-0.1-dev
 libixion-dev
@@ -51,7 +53,6 @@ libucpp-dev
 libzinnia-dev
 libzinnia-doc
 libzinnia0v5
-libzinnia0v5-dbg
 mozc-utils-gui
 netpbm
 neutron-vpnaas-common
@@ -62,6 +63,7 @@ python-anyjson
 python-aodhclient
 python-automaton
 python-barbicanclient
+python-bcrypt
 python-blazarclient
 python-cachetools
 python-castellan
@@ -102,6 +104,7 @@ python-kazoo
 python-keystonemiddleware
 python-kombu
 python-libvirt
+python-logutils
 python-magnumclient
 python-manilaclient
 python-markdown-doc
@@ -136,6 +139,7 @@ python-ovsdbapp
 python-padme-doc
 python-paramiko
 python-passlib
+python-pecan
 python-ply
 python-pycparser
 python-pylxd
@@ -156,6 +160,8 @@ python-ryu
 python-saharaclient
 python-scrypt
 python-senlinclient
+python-simplegeneric
+python-singledispatch
 python-sortedcontainers
 python-statsd
 python-suds
@@ -170,6 +176,7 @@ python-troveclient
 python-twisted
 python-vine
 python-voluptuous
+python-waitress
 python-weakrefmethod
 python-wsme
 python-yaql
