releasing package ubuntu-release-upgrader version 1:19.04.11

--- a/data/mirrors.cfg
+++ b/data/mirrors.cfg
@@ -40,7 +40,6 @@ http://debian.charite.de/ubuntu/
 ftp://ftp.fu-berlin.de/linux/ubuntu/
 #===Greece===
 #===Hungary===
-http://ftp.kfki.hu/linux/ubuntu/
 #===Indonesia===
 #===Iceland===
 #===Ireland===
@@ -101,7 +100,6 @@ http://mirror.ox.ac.uk/sites/archive.ubuntu.com/ubuntu/
 http://ftp-stud.hs-esslingen.de/ubuntu/
 http://ubuntu.otenet.gr/
 http://wwwftp.ciril.fr/pub/linux/ubuntu/archives/
-http://ftp.freepark.org/ubuntu/
 http://ftp.jaist.ac.jp/pub/Linux/ubuntu/
 http://ubuntu.grn.cat/ubuntu/
 http://ubuntu.positive-internet.com/ubuntu/
@@ -194,11 +192,9 @@ http://ftp.arnes.si/pub/mirrors/ubuntu/
 http://ftp.litnet.lt/ubuntu/
 http://ftp.sjtu.edu.cn/ubuntu/
 http://mirror.clarkson.edu/ubuntu/
-http://mirror.hmc.edu/ubuntu/
 http://mirror.its.dal.ca/ubuntu/
 http://mirror.neolabs.kz/ubuntu/
 http://mirrors.bloomu.edu/ubuntu/
-http://ubuntu.securedservers.com/
 http://us.archive.ubuntu.com/ubuntu/
 http://kartolo.sby.datautama.net.id/ubuntu/
 http://mirror.greennet.gl/ubuntu/
@@ -246,7 +242,6 @@ http://ubuntu.volia.net/ubuntu-archive/
 http://ftp.fau.de/ubuntu/
 http://mirror.23media.de/ubuntu/
 http://mirror.transip.net/ubuntu/ubuntu/
-http://ftp.energotel.sk/pub/linux/ubuntu/archive/
 http://mirror.amsiohosting.net/archive.ubuntu.com/
 http://mirror.atlantic.net/ubuntu/
 http://mirror.uchile.cl/ubuntu/
@@ -307,7 +302,6 @@ http://ftp.iinet.net.au/pub/ubuntu/
 http://ubuntu.ntc.net.np/ubuntu/
 http://ftp.aso.ee/ubuntu/
 http://ftp.rezopole.net/ubuntu/
-http://deb-mirror.habari.co.tz/ubuntu/
 http://giano.com.dist.unige.it/ubuntu/
 http://mirror.math.princeton.edu/pub/ubuntu/
 http://mirror.datacenter.az/ubuntu/
@@ -320,7 +314,6 @@ http://mirrors.easynews.com/linux/ubuntu/
 http://ftp.estpak.ee/ubuntu/
 http://ubuntu.parspack.com/ubuntu/
 http://mirrors.cn99.com/ubuntu/
-http://mirror.faraso.org/ubuntu/
 http://ubuntu.mirrors.omnilance.com/ubuntu/
 http://it-mirrors.evowise.com/ubuntu/
 http://ny-mirrors.evowise.com/ubuntu/
@@ -349,10 +342,8 @@ http://ro-mirrors.evowise.com/ubuntu/
 http://mirror.os6.org/ubuntu/
 http://mirror.ng/ubuntu-archive/
 http://mirror.pramati.com/ubuntu/
-http://ubuntu.digitalsuisse.com/
 http://www.club.cc.cmu.edu/pub/ubuntu/
 http://mirrors.lug.mtu.edu/ubuntu/
-http://ubuntu.mirror.snu.edu.in/ubuntu/
 http://ubuntu.asis.io/
 http://mirrors.bangmod.cloud/ubuntu/
 http://mirrors.cloud.linets.cl/ubuntu/
@@ -407,7 +398,6 @@ http://mirror.muvhost.com/ubuntu/
 http://mirror.clearsky.vn/ubuntu/
 http://mirror.vpgrp.io/ubuntu/
 http://mirrors.nxthost.com/ubuntu/
-http://mirror.picosecond.org/ubuntu/
 http://mirror.xeonbd.com/ubuntu-archive/
 http://ubuntu.colocall.net/ubuntu/
 http://ubuntu.mirror.serverloft.de/ubuntu/
@@ -434,7 +424,6 @@ http://mirror.armaghan.net/ubuntu/
 http://ftp.upcnet.ro/mirrors/ubuntu.com/ubuntu/
 http://mirror.iodc.dk/ubuntu/
 http://mirrors.huaweicloud.com/repository/ubuntu/
-http://mirrors.serverhost.ro/ubuntu/
 http://mirror.mrjester.net/ubuntu/archive/
 http://mirror.onevip.mk/ubuntu/
 http://mirror.cs.jmu.edu/pub/ubuntu/
@@ -445,7 +434,6 @@ http://mirror.sov.uk.goscomb.net/ubuntu/
 http://repo.inara.pk/ubuntu/
 http://repo.unpatti.ac.id/ubuntu/
 http://mirror.thaidns.co.th/ubuntu/
-http://mirrors.nwafu.edu.cn/ubuntu/
 http://mirror.aptus.co.tz/pub/ubuntuarchive/
 http://repo.ialab.dsu.edu/ubuntu/
 http://mirror.ufam.edu.br/ubuntu/
@@ -471,7 +459,6 @@ http://ubuntu.mirror.datamossa.io/ubuntu/
 http://mirrors.powernet.com.ru/ubuntu/
 http://mirror.linux.pizza/ubuntu/
 http://mirror.ncunwlab.tk/ubuntu/
-http://ftp.iitm.ac.in/ubuntu/
 http://mirrors.sohu.com/ubuntu/
 http://mirror.init7.net/ubuntu/
 http://mirror.hoster.kz/ubuntu/
@@ -485,11 +472,9 @@ http://kambing.ui.ac.id/ubuntu/
 http://ftp.tsukuba.wide.ad.jp/Linux/ubuntu/
 http://mirror1.totbb.net/ubuntu/
 http://mirrors.shu.edu.cn/ubuntu/
-http://ubuntu.uniminuto.edu/ubuntu/
 http://mirror.launtel.net.au/ubuntu/
 http://fr.archive.ubuntu.com/ubuntu/
 http://mirrors.psu.ac.th/ubuntu/
-http://ubuntu.sepidvas.com/ubuntu/
 http://mirror.onet.pl/pub/mirrors/ubuntu/
 http://ubuntu.turhost.com/ubuntu/
 http://mirror.hostnet.nl/ubuntu/archive/
@@ -498,11 +483,27 @@ http://fireball-public.phys.wvu.edu/mirror/ubuntu/
 http://repos.del.extreme-ix.org/ubuntu/
 http://ftp.heanet.ie/pub/ubuntu/
 http://mirrors.njupt.edu.cn/ubuntu/
-http://mirrors.cqu.edu.cn/ubuntu/
 http://www.gtlib.gatech.edu/pub/ubuntu/
-http://ubuntu.whats-in.space/archive/
 http://ftp.harukasan.org/ubuntu/
 http://quantum-mirror.hu/mirrors/pub/ubuntu/
 http://mirror-hk.koddos.net/ubuntu/
 http://mirror.uoregon.edu/ubuntu/
 http://ubuntu.mirrors.theom.nz/
+http://ubuntu.netforce.hosting/ubuntu/
+http://ubuntu.whats-in.space/ubuntu/
+http://mirror.operationtulip.com/ubuntu/
+http://ubuntu.cybertips.info/ubuntu/
+http://es.mirror.burstable.org/ubuntu/
+http://mirror.iranserver.com/ubuntu/
+http://mirror.fsmg.org.nz/ubuntu/
+http://mirror.unimagdalena.edu.co/ubuntu/
+http://repositorio.nti.ufal.br/ubuntu/
+http://ubuntu.mirrors.isu.net.sa/ubuntu/
+http://mirror.deace.id/ubuntu/
+http://ftp.fsn.hu/ubuntu/
+ftp://mirror.ricta.org.rw/ubuntu/
+http://mirrors.piconets.webwerks.in/ubuntu-mirror/ubuntu/
+http://dafi.inf.um.es/ubuntu/
+http://hu.archive.ubuntu.com/ubuntu/
+http://ftp.energotel.sk/pub/linux/ubuntu/
+http://ubuntu.hysing.is/ubuntu/
