--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 Build-Depends: debhelper (>= 9), 
                python3-all,
+               dh-python,
                python3-distutils-extra, 
                python3-apt (>= 0.8.5~),
                lsb-release,
@@ -12,9 +13,8 @@ Build-Depends: debhelper (>= 9),
                apt-clone (>= 0.2.3~ubuntu2)
 Build-Depends-Indep: libxml-parser-perl, 
                      intltool
-Standards-Version: 3.9.6
+Standards-Version: 4.3.0
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/ubuntu-release-upgrader/trunk
-X-Python3-Version: >= 3.2
 
 Package: ubuntu-release-upgrader-core
 Architecture: all
