releasing package ubuntu-release-upgrader version 1:19.04.14

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,4 +1,7 @@
 # demoted packages from cosmic to disco
+cpp-8-powerpc-linux-gnu
+cpp-powerpc-linux-gnu
+crossbuild-essential-powerpc
 doxygen
 doxygen-doc
 erlang-diameter
@@ -6,9 +9,15 @@ erlang-edoc
 erlang-erl-docgen
 erlang-eunit
 erlang-odbc
+g++-8-powerpc-linux-gnu
+g++-powerpc-linux-gnu
+gcc-8-powerpc-linux-gnu
+gcc-8-powerpc-linux-gnu-base
+gcc-powerpc-linux-gnu
 gir1.2-gmime-3.0
 gir1.2-gtksource-3.0
 gir1.2-ido3-0.1
+gir1.2-mutter-3
 gir1.2-zeitgeist-2.0
 imagemagick
 imagemagick-6.q16
@@ -16,16 +25,23 @@ intel-gpu-tools
 intel-gpu-tools-dbg
 jigit
 libapache2-mod-wsgi
+libasan5-powerpc-cross
+libatomic1-powerpc-cross
+libc6-dev-powerpc-cross
+libc6-powerpc-cross
 libclang1-7
 libdmx1-dbg
 libdouble-conversion-dev
 libdouble-conversion1
 libdpdk-dev
 libfs6-dbg
+libgcc-8-dev-powerpc-cross
+libgcc1-powerpc-cross
 libglm-doc
 libgmime-3.0-0
 libgmime-3.0-dev
 libgmime-3.0-doc
+libgomp1-powerpc-cross
 libgtksourceview-3.0-1
 libgtksourceview-3.0-common
 libgtksourceview-3.0-doc
@@ -44,6 +60,8 @@ libmdds-dev
 libmetis-dev
 libmetis-doc
 libmetis5-dbg
+libmutter-3-0
+libmutter-3-dev
 libneon27
 libneon27-dbg
 libnetpbm10
@@ -65,6 +83,9 @@ libqt5widgets5
 libqt5xml5
 libsmi2-dev
 libsmi2ldbl
+libstdc++-8-dev-powerpc-cross
+libstdc++6-powerpc-cross
+libubsan1-powerpc-cross
 libucpp-dev
 libxapian-dev
 libxapian30
@@ -74,6 +95,7 @@ libzeitgeist-2.0-doc
 libzinnia-dev
 libzinnia-doc
 libzinnia0v5
+linux-libc-dev-powerpc-cross
 mozc-utils-gui
 netpbm
 neutron-vpnaas-common
@@ -115,6 +137,7 @@ python-constantly
 python-contextlib2
 python-cotyledon
 python-croniter
+python-crypto
 python-crypto-dbg
 python-csscompressor
 python-cursive
@@ -178,7 +201,6 @@ python-kazoo
 python-kombu
 python-ldap
 python-ldap-dbg
-python-ldb-dev
 python-libvirt
 python-libxml2
 python-libxml2-dbg
@@ -298,8 +320,8 @@ python-sortedcontainers
 python-statsd
 python-suds
 python-swiftclient
-python-talloc-dev
 python-taskflow
+python-tdb
 python-tenacity
 python-testresources
 python-testscenarios
@@ -351,5 +373,4 @@ vmdk-stream-converter
 xapian-doc
 xapian-examples
 xclip
-xserver-xorg-video-intel
 zeitgeist-core
