releasing package ubuntu-release-upgrader version 1:19.04.16

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -305,6 +305,7 @@ python-requestsexceptions
 python-retrying
 python-rjsmin
 python-ryu
+python-ryu-doc
 python-saharaclient
 python-scrypt
 python-semantic-version
@@ -369,6 +370,7 @@ qttranslations5-l10n
 smitools
 tk8.6-dev
 tk8.6-doc
+ubuntu-wallpapers-cosmic
 vmdk-stream-converter
 xapian-doc
 xapian-examples
