--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -13,7 +13,9 @@ ubuntu-mate-desktop
 update-manager$
 update-manager-core
 ubuntu-release-upgrader-core
-# postgresql (LP: #871893)
+# if for example postgresql-10 is purged the cluster can be dropped which we
+# should prevent (LP: #871893, #1825563)
 ^postgresql-.*[0-9]\.[0-9].*
+^postgresql-.*[0-9][0-9].*
 # the upgrade runs in it
 ^screen$
