--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -111,8 +111,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=cosmic
-To=disco
+From=disco
+To=eoan
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
