releasing package ubuntu-release-upgrader version 1:19.10.1

--- a/data/mirrors.cfg
+++ b/data/mirrors.cfg
@@ -20,7 +20,6 @@ https://esm.ubuntu.com/ubuntu/
 #commercial-ppas
 https://private-ppa.launchpad.net/commercial-ppa-uploaders
 
-
 ##===Australia===
 ##===Austria===
 http://ubuntu.uni-klu.ac.at/ubuntu/
@@ -151,7 +150,6 @@ http://mirror.lstn.net/ubuntu/
 http://mirror.netcologne.de/ubuntu/
 http://mirror.serverloft.eu/ubuntu/ubuntu/
 http://ubuntu.cica.es/ubuntu/
-http://download.nus.edu.sg/mirror/ubuntu/
 http://archive.ubuntumirror.dei.uc.pt/ubuntu/
 http://ftp.icm.edu.pl/pub/Linux/ubuntu/
 http://ftp.lysator.liu.se/ubuntu/
@@ -205,7 +203,6 @@ http://ge.archive.ubuntu.com/ubuntu/
 http://ftp.neowiz.com/ubuntu/
 http://ftp.uni-bayreuth.de/linux/ubuntu/ubuntu/
 http://mirror.edatel.net.co/ubuntu/
-http://mirror.ubuntu.ikoula.com/ubuntu/
 http://suro.ubaya.ac.id/ubuntu/
 http://archive.ubuntu.csg.uzh.ch/ubuntu/
 http://ftp.nluug.nl/os/Linux/distr/ubuntu/
@@ -257,7 +254,6 @@ http://mirrors.pidginhost.com/ubuntu/
 http://mirrors.sonic.net/ubuntu/
 http://mirrors.tripadvisor.com/ubuntu/
 http://mirrors.usinternet.com/ubuntu/archive/
-http://mirror.ni.net.tr/ubuntu/
 http://repo.bigstepcloud.com/ubuntu/
 http://ubuntu.mirror.digitalpacific.com.au/archive/
 http://ubuntu.mirror.serversaustralia.com.au/ubuntu/
@@ -291,7 +287,6 @@ ftp://ftp.man.szczecin.pl/pub/Linux/ubuntu/
 http://ftp.iinet.net.au/pub/ubuntu/
 http://ubuntu.ntc.net.np/ubuntu/
 http://ftp.aso.ee/ubuntu/
-http://ftp.rezopole.net/ubuntu/
 http://giano.com.dist.unige.it/ubuntu/
 http://mirror.math.princeton.edu/pub/ubuntu/
 http://mirror.datacenter.az/ubuntu/
@@ -316,7 +311,6 @@ http://mirror.aminidc.com/ubuntu/
 http://ubuntu.man.lodz.pl/ubuntu/
 http://mirror.its.sfu.ca/mirror/ubuntu/
 http://repos.forethought.net/ubuntu/
-http://mirror.ufscar.br/ubuntu/
 http://ubuntu.dts.mg/ubuntu/
 http://la-mirrors.evowise.com/ubuntu/
 http://mirror.rasanegar.com/ubuntu/archive/
@@ -416,7 +410,6 @@ http://mirrors.layeronline.com/ubuntu/
 http://mirror.ehost.vn/ubuntu/
 http://mirror.sov.uk.goscomb.net/ubuntu/
 http://repo.inara.pk/ubuntu/
-http://repo.unpatti.ac.id/ubuntu/
 http://mirror.thaidns.co.th/ubuntu/
 http://mirror.aptus.co.tz/pub/ubuntuarchive/
 http://repo.ialab.dsu.edu/ubuntu/
@@ -425,7 +418,6 @@ http://ftp.rnl.tecnico.ulisboa.pt/pub/ubuntu/archive/
 http://suse.uni-leipzig.de/pub/releases.ubuntu.com/ubuntu/
 http://pubmirrors.dal.corespace.com/ubuntu/
 http://mirror.kumi.systems/ubuntu/
-http://mirror.ufca.edu.br/mirror/ubuntu-archive/
 http://mirrors.ustc.edu.cn/ubuntu/
 http://mirrors.nju.edu.cn/ubuntu/
 http://mirror.retentionrange.co.bw/ubuntu/
@@ -441,7 +433,6 @@ http://mozart.ee.ic.ac.uk/ubuntu-archive/
 http://ubuntu.mirror.datamossa.io/ubuntu/
 http://mirrors.powernet.com.ru/ubuntu/
 http://mirror.linux.pizza/ubuntu/
-http://mirror.ncunwlab.tk/ubuntu/
 http://mirrors.sohu.com/ubuntu/
 http://mirror.init7.net/ubuntu/
 http://mirror.hoster.kz/ubuntu/
@@ -456,7 +447,6 @@ http://mirror1.totbb.net/ubuntu/
 http://mirror.launtel.net.au/ubuntu/
 http://fr.archive.ubuntu.com/ubuntu/
 http://mirrors.psu.ac.th/ubuntu/
-http://mirror.onet.pl/pub/mirrors/ubuntu/
 http://ubuntu.turhost.com/ubuntu/
 http://mirror.hostnet.nl/ubuntu/archive/
 http://mirror.cc.columbia.edu/pub/linux/ubuntu/archive/
@@ -478,7 +468,6 @@ http://mirror.iranserver.com/ubuntu/
 http://mirror.fsmg.org.nz/ubuntu/
 http://mirror.unimagdalena.edu.co/ubuntu/
 http://repositorio.nti.ufal.br/ubuntu/
-http://ubuntu.mirrors.isu.net.sa/ubuntu/
 http://mirror.deace.id/ubuntu/
 http://ftp.fsn.hu/ubuntu/
 ftp://mirror.ricta.org.rw/ubuntu/
@@ -495,7 +484,6 @@ http://mirror.picosecond.org/ubuntu/
 http://rep-ubuntu-il.upress.io/ubuntu/
 http://mirror.niif.hu/ubuntu/
 http://linuxmirror.es/ubuntu/
-http://ftp.utexas.edu/ubuntu/
 http://mirror.linux-ia64.org/ubuntu/
 http://ubuntu.melbourneitmirror.net/archive/
 http://mirrors.ukfast.co.uk/sites/archive.ubuntu.com/
@@ -514,3 +502,19 @@ http://mirrors.liquidweb.com/ubuntu/
 http://mirrors.dotsrc.org/ubuntu/
 http://mirrors.melbourne.co.uk/ubuntu/
 http://mirror.as24220.net/pub/ubuntu-archive/
+http://kozyatagi.mirror.guzel.net.tr/ubuntu/
+http://mirrors.fastdns.ca/ubuntu/
+ftp://mirrors.fnl.bupt.maojianwei.com/Ubuntu_apt_mirror/
+http://mirror.solnode.io/ubuntu/releases/
+http://mirrors.vcea.wsu.edu/ubuntu/
+http://mirrors.webtuga.pt/ubuntu/
+http://mirror.usetelecom.com.br/ubuntu/
+http://ubuntu.ip-connect.vn.ua/
+http://mirror.23media.com/ubuntu/
+http://ubuntu.mirror.garr.it/ubuntu/
+http://ubuntu.xaas.ir/
+http://ubuntu-archive.mirrors.estointernet.in/
+http://ubuntu.securedservers.com/
+http://mirror.1000mbps.com/ubuntu/
+http://mirrors.isu.net.sa/pub/ubuntu-releases/
+http://ir.ubuntu.sindad.cloud/ubuntu/
