--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,378 +1,3 @@
-# demoted packages from cosmic to disco
-cpp-8-powerpc-linux-gnu
-cpp-powerpc-linux-gnu
-crossbuild-essential-powerpc
-doxygen
-doxygen-doc
-erlang-diameter
-erlang-edoc
-erlang-erl-docgen
-erlang-eunit
-erlang-odbc
-g++-8-powerpc-linux-gnu
-g++-powerpc-linux-gnu
-gcc-8-powerpc-linux-gnu
-gcc-8-powerpc-linux-gnu-base
-gcc-powerpc-linux-gnu
-gir1.2-gmime-3.0
-gir1.2-gtksource-3.0
-gir1.2-ido3-0.1
-gir1.2-mutter-3
-gir1.2-zeitgeist-2.0
-imagemagick
-imagemagick-6.q16
-intel-gpu-tools
-intel-gpu-tools-dbg
-jigit
-libapache2-mod-wsgi
-libasan5-powerpc-cross
-libatomic1-powerpc-cross
-libc6-dev-powerpc-cross
-libc6-powerpc-cross
-libclang1-7
-libdmx1-dbg
-libdouble-conversion-dev
-libdouble-conversion1
-libdpdk-dev
-libfs6-dbg
-libgcc-8-dev-powerpc-cross
-libgcc1-powerpc-cross
-libglm-doc
-libgmime-3.0-0
-libgmime-3.0-dev
-libgmime-3.0-doc
-libgomp1-powerpc-cross
-libgtksourceview-3.0-1
-libgtksourceview-3.0-common
-libgtksourceview-3.0-doc
-libicu-le-hb-dev
-libicu-le-hb0
-libido3-0.1-0
-libido3-0.1-dev
-libindicator3-7
-libipt-dev
-libipt2
-libixion-dev
-libixion-doc
-libjte-dev
-libjte1
-libmdds-dev
-libmetis-dev
-libmetis-doc
-libmetis5-dbg
-libmutter-3-0
-libmutter-3-dev
-libneon27
-libneon27-dbg
-libnetpbm10
-libnetpbm10-dev
-libqt5concurrent5
-libqt5core5a
-libqt5dbus5
-libqt5gui5
-libqt5network5
-libqt5opengl5
-libqt5opengl5-dev
-libqt5printsupport5
-libqt5sql5
-libqt5sql5-sqlite
-libqt5svg5
-libqt5svg5-dev
-libqt5test5
-libqt5widgets5
-libqt5xml5
-libsmi2-dev
-libsmi2ldbl
-libstdc++-8-dev-powerpc-cross
-libstdc++6-powerpc-cross
-libubsan1-powerpc-cross
-libucpp-dev
-libxapian-dev
-libxapian30
-libzeitgeist-2.0-0
-libzeitgeist-2.0-dev
-libzeitgeist-2.0-doc
-libzinnia-dev
-libzinnia-doc
-libzinnia0v5
-linux-libc-dev-powerpc-cross
-mozc-utils-gui
-netpbm
-neutron-vpnaas-common
-notification-daemon
-openexr-doc
-pbuilder
-python-all
-python-all-dbg
-python-all-dev
-python-amqp
-python-aniso8601
-python-anyjson
-python-aodhclient
-python-appdirs
-python-apt-dbg
-python-apt-dev
-python-attr
-python-automat
-python-automaton
-python-barbicanclient
-python-bcrypt
-python-blazarclient
-python-bsddb3
-python-bsddb3-dbg
-python-bson
-python-bson-ext
-python-cachetools
-python-cairo
-python-cairo-dbg
-python-cairo-dev
-python-castellan
-python-ceilometerclient
-python-cffi-backend-dbg
-python-cinderclient
-python-cliff
-python-cmd2
-python-concurrent.futures
-python-constantly
-python-contextlib2
-python-cotyledon
-python-croniter
-python-crypto
-python-crypto-dbg
-python-csscompressor
-python-cursive
-python-dbus-dbg
-python-dbus-dev
-python-ddt
-python-decorator
-python-defusedxml
-python-deprecation
-python-django-appconf
-python-django-babel
-python-django-compressor
-python-django-pyscss
-python-egenix-mx-base-dbg
-python-egenix-mx-base-dev
-python-egenix-mxbeebase
-python-egenix-mxbeebase-doc
-python-egenix-mxdatetime
-python-egenix-mxdatetime-doc
-python-egenix-mxproxy
-python-egenix-mxproxy-doc
-python-egenix-mxqueue
-python-egenix-mxqueue-doc
-python-egenix-mxstack
-python-egenix-mxstack-doc
-python-egenix-mxtexttools
-python-egenix-mxtexttools-doc
-python-egenix-mxtools
-python-egenix-mxtools-doc
-python-egenix-mxuid
-python-egenix-mxuid-doc
-python-egenix-mxurl
-python-egenix-mxurl-doc
-python-extras
-python-fixtures
-python-flask-restful
-python-functools32
-python-future
-python-futurist
-python-gdbm
-python-gdbm-dbg
-python-gi-dbg
-python-gi-dev
-python-glance-store
-python-glanceclient
-python-gnocchiclient
-python-greenlet-dev
-python-gridfs
-python-heatclient
-python-httplib2
-python-hyperlink
-python-incremental
-python-ipaddr
-python-jmespath
-python-json-pointer
-python-jsonpatch
-python-jsonpath-rw
-python-jsonpath-rw-ext
-python-jsonschema
-python-kazoo
-python-kombu
-python-ldap
-python-ldap-dbg
-python-libvirt
-python-libxml2
-python-libxml2-dbg
-python-libxslt1
-python-libxslt1-dbg
-python-linecache2
-python-logutils
-python-lxml-dbg
-python-magnumclient
-python-manilaclient
-python-markdown-doc
-python-markupsafe-dbg
-python-microversion-parse
-python-migrate
-python-mimeparse
-python-mistralclient
-python-mock
-python-mock-doc
-python-monascaclient
-python-munch
-python-mysqldb
-python-mysqldb-dbg
-python-nacl
-python-netifaces-dbg
-python-networkx
-python-neutron-lib
-python-neutronclient
-python-novaclient
-python-numpy
-python-numpy-dbg
-python-octaviaclient
-python-openstackclient
-python-openstacksdk
-python-openvswitch
-python-os-brick
-python-os-client-config
-python-os-traits
-python-os-vif
-python-os-win
-python-os-xenapi
-python-osc-lib
-python-oslo.concurrency
-python-oslo.db
-python-oslo.messaging
-python-oslo.middleware
-python-oslo.policy
-python-oslo.privsep
-python-oslo.reports
-python-oslo.rootwrap
-python-oslo.service
-python-oslo.versionedobjects
-python-oslo.vmware
-python-osprofiler
-python-ovsdbapp
-python-packaging
-python-padme-doc
-python-pam
-python-pam-dbg
-python-paramiko
-python-passlib
-python-pathlib
-python-pathlib-doc
-python-pecan
-python-pil-dbg
-python-pil.imagetk
-python-pil.imagetk-dbg
-python-pint
-python-ply
-python-posix-ipc
-python-prettytable
-python-psutil
-python-psutil-dbg
-python-psycopg2
-python-psycopg2-dbg
-python-pyasn1-modules
-python-pycparser
-python-pycurl
-python-pycurl-dbg
-python-pyicu
-python-pyicu-dbg
-python-pylibacl-dbg
-python-pylxd
-python-pymemcache
-python-pymongo
-python-pymongo-ext
-python-pymysql
-python-pyperclip
-python-pypowervm
-python-pyroute2
-python-pysaml2
-python-pyscss
-python-pysmi
-python-pysnmp4
-python-pysnmp4-apps
-python-pysnmp4-mibs
-python-pyxattr-dbg
-python-rcssmin
-python-redis
-python-requests-toolbelt
-python-requests-unixsocket
-python-requestsexceptions
-python-retrying
-python-rjsmin
-python-ryu
-python-ryu-doc
-python-saharaclient
-python-scrypt
-python-semantic-version
-python-senlinclient
-python-serial
-python-service-identity
-python-setproctitle
-python-setproctitle-dbg
-python-simplegeneric
-python-simplejson-dbg
-python-singledispatch
-python-sortedcontainers
-python-statsd
-python-suds
-python-swiftclient
-python-taskflow
-python-tdb
-python-tenacity
-python-testresources
-python-testscenarios
-python-testtools
-python-tinyrpc
-python-tk
-python-tk-dbg
-python-tooz
-python-traceback2
-python-troveclient
-python-twisted
-python-twisted-bin
-python-twisted-bin-dbg
-python-twisted-core
-python-twisted-runner
-python-twisted-runner-dbg
-python-unicodecsv
-python-unittest2
-python-vine
-python-voluptuous
-python-waitress
-python-warlock
-python-weakrefmethod
-python-wsme
-python-yaml-dbg
-python-yaql
-python-zake
-python-zaqarclient
-python-zope.interface
-python-zope.interface-dbg
-python3-padme
-qpdf
-qt5-gtk-platformtheme
-qt5-qmake
-qt5-qmake-bin
-qtbase5-dev
-qtbase5-dev-tools
-qtbase5-doc
-qtbase5-examples
-qtbase5-private-dev
-qtchooser
-qtsvg5-doc
-qtsvg5-examples
-qttranslations5-l10n
-smitools
-tk8.6-dev
-tk8.6-doc
-ubuntu-wallpapers-cosmic
-vmdk-stream-converter
-xapian-doc
-xapian-examples
-xclip
-zeitgeist-core
+# demoted packages from disco to eoan
+libgcrypt11-dev
+python-sss
