--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -42,9 +42,15 @@ EnableApport=yes
 
 [KernelRemoval]
 Version=5.0.0
-BaseNames=linux-image,linux-headers,linux-image-debug,linux-backport-modules,
-  linux-header-lbm,linux-signed-image,linux-tools,linux-cloud-tools,
-  linux-image-extra
+BaseNames=linux-image,
+  linux-headers,
+  linux-image-extra,
+  linux-modules,
+  linux-modules-extra,
+  linux-signed-image,
+  linux-image-unsigned,
+  linux-tools,
+  linux-cloud-tools
 Types=386,ec2,generic,generic-lpae,lowlatency,powerpc-e500mc,powerpc-smp,
   powerpc64-emb,powerpc64-smp,rt,server,virtual
 
