releasing package ubuntu-release-upgrader version 1:19.10.5

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,2 +1,8 @@
 # demoted packages from disco to eoan
+heartbeat
+heartbeat-dev
+libheartbeat2
+libheartbeat2-dev
 python-sss
+vim-gtk3
+vim-gui-common
