DistUpgradeQuirks.py: modify string regarding refreshing and installing snaps so that it is translatable. (LP: #1824005)

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,8 +1,165 @@
 # demoted packages from disco to eoan
+duplicity
 heartbeat
 heartbeat-dev
+liberasurecode-dev
+liberasurecode1
+libgf-complete-dev
+libgf-complete1
 libheartbeat2
 libheartbeat2-dev
+libjerasure-dev
+libjerasure2
+libldns-dev
+libldns2
+libpython-all-dbg
+libpython-all-dev
+libpython-dbg
+libpython-dev
+libpython-stdlib
+libpython2-dbg
+libpython2-dev
+libpython2-stdlib
+libpython2.7
+libpython2.7-dbg
+libpython2.7-dev
+libpython2.7-minimal
+libpython2.7-stdlib
+librsync-dbg
+librsync-dev
+librsync1
+libstrongswan-extra-plugins
+libtspi-dev
+libtspi1
+mail-stack-delivery
+mailman
+python
+python-asn1crypto
+python-babel
+python-backports.functools-lru-cache
+python-blinker
+python-bs4
+python-certifi
+python-cffi-backend
+python-chardet
+python-cherrypy3
+python-cherrypy3-doc
+python-click
+python-colorama
+python-configparser
+python-cryptography
+python-dateutil
+python-dbg
+python-dbus
+python-debtcollector
+python-dev
+python-dnspython
+python-doc
+python-docutils
+python-dogpile.cache
+python-entrypoints
+python-enum34
+python-enum34-doc
+python-eventlet
+python-fasteners
+python-flask
+python-flask-doc
+python-flask-restful-doc
+python-formencode
+python-funcsigs
+python-gi
+python-greenlet
+python-html5lib
+python-idna
+python-ipaddress
+python-iso8601
+python-itsdangerous
+python-jinja2
+python-jinja2-doc
+python-jwt
+python-keyring
+python-keystoneauth1
+python-keystoneclient
+python-keystonemiddleware
+python-lockfile
+python-lockfile-doc
+python-lxml
+python-lxml-doc
+python-markupsafe
+python-memcache
+python-minimal
+python-monotonic
+python-msgpack
+python-netifaces
+python-oauthlib
+python-olefile
+python-openid
+python-openid-doc
+python-openssl
+python-os-service-types
+python-oslo.cache
+python-oslo.config
+python-oslo.context
+python-oslo.i18n
+python-oslo.log
+python-oslo.serialization
+python-oslo.utils
+python-paste
+python-pastescript
+python-pbr
+python-pil
+python-pkg-resources
+python-pyeclib
+python-pygments-doc
+python-pyinotify
+python-pyinotify-doc
+python-pyparsing
+python-repoze.lru
+python-requests
+python-rfc3986
+python-roman
+python-routes
+python-scgi
+python-secretstorage
+python-setuptools
+python-simplejson
+python-simplejson-doc
+python-six
+python-soupsieve
+python-sqlalchemy
+python-sqlalchemy-ext
 python-sss
+python-stevedore
+python-swift
+python-tempita
+python-tz
+python-urllib3
+python-webencodings
+python-webob
+python-wrapt
+python-xattr
+python-yaml
+python2
+python2-dbg
+python2-dev
+python2-doc
+python2-minimal
+python2.7
+python2.7-dbg
+python2.7-dev
+python2.7-doc
+python2.7-examples
+python2.7-minimal
+strongswan-tnc-base
+strongswan-tnc-client
+strongswan-tnc-pdp
+strongswan-tnc-server
+swift-account
+swift-container
+swift-doc
+swift-object
+swift-proxy
+trousers
+trousers-dbg
 vim-gtk3
 vim-gui-common
