data/DistUpgrade.cfg, data/DistUpgrade.cfg.bionic: update for the upgrade from 19.10 to 20.04 harder.

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -103,8 +103,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=disco
-To=eoan
+From=eoan
+To=focal
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
