debian/control: Update Vcs-*: URLs

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 9),
 Build-Depends-Indep: libxml-parser-perl, 
                      intltool
 Standards-Version: 3.9.6
-Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/ubuntu-release-upgrader/trunk
+Vcs-Git: https://git.launchpad.net/ubuntu-release-upgrader -b ubuntu/cosmic
 X-Python3-Version: >= 3.2
 
 Package: ubuntu-release-upgrader-core
