tests: Handle the rename of the pep8 tool to pycodestyle.

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,2 +1,2 @@
 Tests: nose-tests
-Depends: @, gir1.2-webkit2-4.0, python3-mock, python3-nose, xvfb, python3-apport, pep8
+Depends: @, gir1.2-webkit2-4.0, python3-mock, python3-nose, xvfb, python3-apport, pycodestyle
