--- a/data/removal_blacklist.cfg
+++ b/data/removal_blacklist.cfg
@@ -19,3 +19,5 @@ ubuntu-release-upgrader-core
 ^postgresql-.*[0-9][0-9].*
 # the upgrade runs in it
 ^screen$
+# the upgrade might be run over ssh
+^openssh-server$
