data/mirrors.cfg, utils/update_mirrors.py: Add in ddebs.ubuntu.com as an official package source.

--- a/data/mirrors.cfg
+++ b/data/mirrors.cfg
@@ -11,6 +11,8 @@ http://ports.ubuntu.com/ubuntu-ports/
 ftp://ports.ubuntu.com/ubuntu-ports/
 http://old-releases.ubuntu.com/
 ftp://old-releases.ubuntu.com/
+http://ddebs.ubuntu.com/
+ftp://ddebs.ubuntu.com/
 
 #commercial (both urls are valid)
 http://archive.canonical.com
